# meshloc_release

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  download_meshloc_data.sh  localize.py  localize_12scenes.py  setup.py
src/: CMakeLists.txt  absolute_pose_estimator.cc  absolute_pose_estimator.h  main.cc  multi_absolute_pose_estimator.cc  multi_absolute_pose_estimator.h  pose_estimation.cc  simple_pose_estimation.cc  spatial_ransac.h  types.h  utils.cc  utils.h
